# poker-simulation

./: .gitignore  FUTURE_WORK.md  GUIDE.md  PREREGISTRATION.md  README.md  REFERENCES.md  THESIS.md  pyproject.toml  references.md  requirements.txt
app/: charts.py  simulator_app.py  theme.py
examples/: run_simulation.py
figures/: README.md  blockB_action_grid.html  blockB_bust_clip.html  blockB_bust_rate.html  blockB_selfplay.html  blockB_tilt_decouple.html  exec_summary.html  exploitability.html  headline.html  icm_edge_bubble.html  icm_edge_mild.html  neural_nfsp.html  plain_nash.html  plain_rl_edge.html  plain_tilt.html  pool_leaderboard.html  pool_pnl_box.html  pool_sweep.html  rollout_fe.html  scale.html  seed_sweep.html  tilt_lossvswin.html  tilt_realdata.html  variance_reduction.html
models/: confirmatory_rl.pt
notebooks/: 00_overview.ipynb  01_evaluation_rigor.ipynb  02_exploitability_leduc.ipynb  03_realdata_tilt.ipynb  04_neural_scaling.ipynb  05_exploitation.ipynb  README.md
results/: action_grid.jsonl  bust_clip.jsonl  confirmatory.json  dbr_frontier.json  exploitability.json  exploitation.json  headline_history.json  icm.jsonl  neural_nfsp.json  pool.json  rnr_frontier.json  rollout_fe.jsonl  scale_experiment.json  seed_sweep.json  selfplay.jsonl  tilt_decouple.jsonl  tilt_realdata.json  variance_reduction.json
scripts/: eval_belief_rl.py  fetch_phh.py  make_figures.py  measure_action_grid.py  measure_bust_clip.py  measure_confirmatory.py  measure_dbr.py  measure_exploitability.py  measure_exploitation.py  measure_headline.py  measure_icm.py  (+16 more)
(+67 files in other folders)
